[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "ConcurrentTasking"
version = "0.2.0"
authors = [{ name = "Tom Samwel", email = "tommiesamwel@gmail.com" }]
description = "A powerful, yet straightforward library for managing and processing tasks concurrently."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pydantic>=1.8.2"]
